--- a/expense-manager-webapp/pom.xml
+++ b/expense-manager-webapp/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>icu4j</artifactId>
 			<version>63.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
