--- a/expense-manager-webapp/src/main/resources/application.properties
+++ b/expense-manager-webapp/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.data=data.sql
+spring.sql.init.platform=h2
+
 server.error.whitelabel.enable=true
